check for the secret key path and try to import using gpgpg2

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -46,11 +46,11 @@ jobs:
           cd .github/keys
           ls
           pwd
-          
-#       - name: Setup keystore
-#         run: |
-#           sudo apt-get --yes install gnupg
-#           gpg --import ./.github/keys/secret-key.gpg
+
+      - name: Setup keystore
+        run: |
+          # sudo apt-get --yes install gnupg
+          gpg2 --import ./.github/keys/secret-key.gpg
 #           gpg --quiet --batch --passphrase=adityan.kannan410  --allow-secret-key-import --import ./.github/keys/secret-key.gpg
           
 #       - name: Decrypt the keystore file
