import the secret key and decrypt it using gpg2

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -51,10 +51,7 @@ jobs:
         run: |
           gpg2 --import ./.github/keys/secret-key.gpg
           gpg2 --quiet --batch --passphrase=adityan.kannan410  --allow-secret-key-import --import ./.github/keys/secret-key.gpg
-          
-      - name: Decrypt the keystore file
-        run: |    
-          gpg --batch --passphrase=adityan.kannan410 --decrypt --output ./app/release.keystore ./app/release.keystore.gpg
+          gpg2 --batch --passphrase=adityan.kannan410 --decrypt --output ./app/release.keystore ./app/release.keystore.gpg
 
 # #1 - generate at runtime.
 # #2 - Encrypt in workflow and decrypt and use it.
