--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -51,7 +51,8 @@ jobs:
         run: |
           gpg2 --import ./.github/keys/public_key.gpg
           gpg2 --quiet --batch --passphrase=adityan.kannan410  --allow-secret-key-import --import ./.github/keys/secret_key.gpg
-          gpg2 --batch --passphrase=adityan.kannan410 --decrypt --output ./app/release.keystore ./app/release.keystore.gpg
+          cd android
+          gpg2 --batch --passphrase=adityan.kannan410 --pinentry-mode loopback --decrypt --output app/release.keystore app/release.keystore.gpg
 
 # #1 - generate at runtime.
 # #2 - Encrypt in workflow and decrypt and use it.
