--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -68,6 +68,7 @@ jobs:
           cd android
           yes | sudo fastlane increment_vc
           yes | sudo fastlane increment_vname
+          cd app
           fastlane build_android
       
         env:
