Build the app and clean it before hand

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -66,6 +66,7 @@ jobs:
       - name: Run Fastlane
         run: |
           cd android
+          yes | ./gradlew clean
           yes | sudo fastlane execute_android
       
         env:
