--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -65,9 +65,7 @@ jobs:
 
       - name: Run Fastlane
         run: |
-          cd android
-          yes | ./gradlew clean
-          yes | sudo fastlane execute_android
+          fastlane execute_android
       
         env:
           MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
