Fix the above error

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -65,6 +65,7 @@ jobs:
 
       - name: Run Fastlane
         run: |
+          cd android
           fastlane execute_android
       
         env:
