Change the build command and add env backend url

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -1,5 +1,8 @@
 name: Integrating fastlane with pipeline
 
+env:
+  backendServiceDefaultUrl: https://api.qa-121.mosip.net/residentmobileapp
+  
 on:
   push:
     branches:
