Run build without a fastlane lane and give read permission for build.gradle

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -65,7 +65,8 @@ jobs:
 
       - name: Run Fastlane
         run: |
-          cd android
+          cd android/app
+          chmod +r build.gradle
           yes | sudo fastlane increment_vc
           yes | sudo fastlane increment_vname
           ./gradlew :app:assembleNewlogicRelease
