Run build without a fastlane lane and remove version name and code

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -65,13 +65,11 @@ jobs:
 
       - name: Run Fastlane
         run: |
-          cd android/app
-          chmod +r build.gradle
-          cd ..
-          yes | sudo fastlane increment_vc
-          yes | sudo fastlane increment_vname
+          cd android
+          # yes | sudo fastlane increment_vc
+          # yes | sudo fastlane increment_vname
           ./gradlew :app:assembleNewlogicRelease
-          # fastlane build_android
+          fastlane build_android
       
         env:
           MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
