Clean and Stop and Run build with a single lane in fastfile

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -66,6 +66,8 @@ jobs:
       - name: Run Fastlane
         run: |
           cd android
+          ./gradlew clean
+          ./gradlew --stop
           # yes | sudo fastlane increment_vc
           # yes | sudo fastlane increment_vname
           # ./gradlew :app:assembleNewlogicRelease
