--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -87,8 +87,8 @@ jobs:
           # yes | sudo fastlane increment_vc
           # yes | sudo fastlane increment_vname
           # ./gradlew :app:assembleNewlogicRelease
-          yes | sudo fastlane build_and_increment
-          bundle exec fastlane build_bundle
+          # yes | sudo fastlane build_and_increment
+          yes | sudo fastlane build_android
       
         env:
           MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
