Run build, vname, vcode in single lane with adding openssl legacy

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -77,6 +77,8 @@ jobs:
           echo $RELEASE_KEYSTORE
           echo $RELEASE_KEYSTORE_ALIAS
           echo $RELEASE_KEYSTORE_PASSWORD
+          export NODE_OPTIONS=--openssl-legacy-provider
+          echo $NODE_OPTIONS
 
       - name: Run Fastlane
         run: |
