--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -18,22 +18,24 @@ jobs:
 
       - name: Install npm 
         run: |
+          rm -rf node_modules
+          rm -rf /tmp/metro-*
           npm install
 
       # Cache stuff for faster build
-      - name: Cache local npm repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          path: ~/.npm
+      # - name: Cache local npm repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      #     path: ~/.npm
 
-      - name: Cache local gradle repository
-        uses: actions/cache@v3.0.11
-        with:
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+      # - name: Cache local gradle repository
+      #   uses: actions/cache@v3.0.11
+      #   with:
+      #     key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+      #     path: |
+      #       ~/.gradle/caches
+      #       ~/.gradle/wrapper
       
       - name: Create .env.local file
         run: |
