--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -84,6 +84,8 @@ jobs:
       - name: Run Fastlane
         run: |
           cd android
+          yes | sudo apt install libssl-dev=3.1.0
+          openssl version
           # yes | sudo fastlane increment_vc
           # yes | sudo fastlane increment_vname
           # ./gradlew :app:assembleNewlogicRelease
