--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "prepare": "husky install",
-    "start": "react-scripts start --openssl-legacy-provider",
+    "start": "react-scripts start",
     "android:mosip": "react-native run-android --variant=mosipDebug",
     "android:newlogic": "react-native run-android --variant=newlogicDebug",
     "android:ph": "react-native run-android --variant=phDebug",
