--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -14,13 +14,13 @@ jobs:
       - uses: actions/checkout@v3.1.0
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
+          node-version: '16.17.0'
 
-      - name: Install npm 
-        run: |
-          rm -rf node_modules
-          rm -rf /tmp/metro-*
-          npm install
+      # - name: Install npm 
+      #   run: |
+      #     rm -rf node_modules
+      #     rm -rf /tmp/metro-*
+      #     npm install
 
       # Cache stuff for faster build
       # - name: Cache local npm repository
@@ -84,8 +84,8 @@ jobs:
       - name: Run Fastlane
         run: | 
           cd android
-          fastlane env 
-          node -v     
+          node -v  
+          fastlane env    
           # yes | sudo fastlane increment_vc
           # yes | sudo fastlane increment_vname
           # ./gradlew :app:assembleNewlogicRelease
