install node in fastlane and run the lane

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -90,7 +90,8 @@ jobs:
           # yes | sudo fastlane increment_vname
           # ./gradlew :app:assembleNewlogicRelease
           # yes | sudo fastlane build_and_increment
-          yes| sudo fastlane build_android
+          # yes| sudo fastlane build_android
+          fastlane install_node
           node -v
       
         env:
