update fastlane and install node in a single lane and build in same lane

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -85,6 +85,7 @@ jobs:
         run: | 
           cd android
           node -v  
+          sudo gem install --yes fastlane -NV
           yes| sudo fastlane build_inji
           node -v
       
