--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -85,8 +85,8 @@ jobs:
         run: | 
           cd android
           node -v  
-          sudo gem install --yes fastlane -NV
-          yes| sudo fastlane build_inji
+          yes | sudo gem install fastlane -NV
+          yes | sudo fastlane build_inji
           node -v
       
         env:
