--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -86,7 +86,7 @@ jobs:
           cd android
           node -v  
           yes | sudo gem install fastlane -NV
-          yes | sudo fastlane build_inji
+          yes | sudo fastlane install_node
           node -v
       
         env:
