--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -85,6 +85,7 @@ jobs:
         run: | 
           cd android
           node -v  
+          which node
           yes | sudo fastlane build_android
           node -v
       
