check node path and print PATH

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -86,6 +86,7 @@ jobs:
           cd android
           node -v  
           which node
+          echo $PATH
           yes | sudo fastlane build_android
           node -v
       
