check node path and print PATH variable

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -87,6 +87,7 @@ jobs:
           node -v  
           which node
           echo $PATH
+          cat ~/.bashrc
           yes | sudo fastlane build_android
           node -v
       
