--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -88,7 +88,7 @@ jobs:
           which node
           echo $PATH
           cat ~/.bashrc
-          fastlane install_plugins
+          yes | sudo fastlane install_plugins
           fastlane build_android
           node -v
       
