add a workflow file for PR raised and build it

--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -1,11 +1,7 @@
 name: Integrating fastlane with pipeline
 
 on:
-  push:
-    branches:
-      - ci-linux-android
-    tags:
-      - '*'
+  workflow_dispatch:
 
 jobs:
   build-android:
