--- a/.github/workflows/android-custom-linux-build.yml
+++ b/.github/workflows/android-custom-linux-build.yml
@@ -1,7 +1,24 @@
 name: Integrating fastlane with pipeline
 
+env:
+  backendServiceDefaultUrl: https://api.qa-121.mosip.net/residentmobileapp
+  
 on:
   workflow_dispatch:
+    inputs:
+      backendServiceUrl:
+        description: 'Backend service URL'
+        required: true
+        default: 'https://api.qa-121.mosip.net/residentmobileapp'
+        type: string
+      theme:
+        description: 'Application Theme'
+        required: true
+        default: 'orange'
+        type: choice
+        options:
+          - orange
+          - purple
 
 jobs:
   build-android:
