Add manual workflow dispatch for ci-linux repo

--- a/.github/workflows/android-custom-linux-build-manual.yml
+++ b/.github/workflows/android-custom-linux-build-manual.yml
@@ -1,4 +1,4 @@
-name: Integrating fastlane with pipeline
+name: Run manual build
 
 env:
   backendServiceDefaultUrl: https://api.qa-121.mosip.net/residentmobileapp
