--- a/.github/workflows/ci-ios.yml
+++ b/.github/workflows/ci-ios.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Deploy iOS Beta to TestFlight via Fastlane
         run: |
           cd ios
-          fastlane beta
+          sudo fastlane beta
         env:
           APP_STORE_CONNECT_TEAM_ID: '${{ secrets.APP_STORE_CONNECT_TEAM_ID }}'
           DEVELOPER_APP_ID: '${{ secrets.DEVELOPER_APP_ID }}'
