--- a/.github/workflows/ci-ios.yml
+++ b/.github/workflows/ci-ios.yml
@@ -43,7 +43,7 @@ jobs:
           cd ios
           pod install
         
-      - name: Deploy iOS Beta to TestFlight via Fastlane
+      - name: Deploy iOS Beta to TestFlight
         run: |
           cd ios
           fastlane beta
