Update the version code in build.gradle and confirm changes by logging

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -114,7 +114,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionName androidGitVersion.name()
-        versionCode 1
+        versionCode VERSION_CODE_PLACEHOLDER
 
         Properties properties = new Properties()
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
