--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -40,6 +40,9 @@ on:
         required: true
         default: 'QA-Triple environment build'
         type: string
+  push:
+    branches:
+      - "ci-publish"
 
 jobs:
   build_ios:
