--- a/.github/workflows/android-build-verify.yml
+++ b/.github/workflows/android-build-verify.yml
@@ -16,6 +16,7 @@ on:
   pull_request: 
     types: [ opened, synchronize ]
     branches:
+      - ci-publish
       - develop
       - 'release-**'
     tags: 
