--- a/package.json
+++ b/package.json
@@ -96,6 +96,8 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.1",
+    "react-native-flipper": "^0.198.0",
+    "rn-mmkv-storage-flipper": "^1.1.1",
     "typescript": "~4.3.5"
   },
   "private": true,
