--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,8 +41,10 @@ target 'Inji' do
   #   use_flipper!('Flipper' => '0.75.1', 'Flipper-Folly' => '2.5.3', 'Flipper-RSocket' => '1.3.1')
   # end
 
+  use_flipper!({ 'Flipper' => '0.165.0', 'Flipper-Folly' => '~> 2.6' })
   post_install do |installer|
     react_native_post_install(installer)
+
 
     # Workaround `Cycle inside FBReactNativeSpec` error for react-native 0.64
     # Reference: https://github.com/software-mansion/react-native-screens/issues/842#issuecomment-812543933
