--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -203,12 +203,13 @@ android {
             signingConfig signingConfigs.debug
         }
         release {
+            lintOptions {
+                checkReleaseBuilds false
+                abortOnError false
+            }
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.release
-            lintOptions {
-                abortOnError false
-            }
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
