Add a commit with a tag 0.2.2

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,8 +88,7 @@ def reactNativeArchitectures() {
 }
 
 androidGitVersion {
-    baseCode 0
-    codeFormat 'MXXNXXPXX'
+    codeFormat 'MXXNXXP'
     format '% tag %%commit_%%branch%'
 }
 
