[INJI-69]fix:The mobile camera is not opening on the scan page when the flight mode is turned

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -157,7 +157,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionName androidGitVersion.name()
-        versionCode 1
+        versionCode androidGitVersion.code()
 
         Properties properties = new Properties()
         properties.load(project.rootProject.file('local.properties').newDataInputStream())
