feat(INJI-221): [Vijay] oidc mock impl

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -165,7 +165,7 @@ android {
         manifestPlaceholders = [
             APP_NAME: APP_NAME_RELEASE,
             GOOGLE_NEARBY_MESSAGES_API_KEY: "${properties.getProperty('GOOGLE_NEARBY_MESSAGES_API_KEY')}",
-            appAuthRedirectScheme: 'io.mosip.residentapp'
+            appAuthRedirectScheme: 'io.mosip.residentapp.inji'
         ]
     }
     splits {
