--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "expo-updates": "~0.11.6",
     "i18next": "^21.6.16",
     "iso-639-3": "^3.0.1",
-    "mosip-inji-face-sdk": "^0.1.12",
+    "mosip-inji-face-sdk": "github:biometric-technologies/mosip-mobileid-sdk#IriScanDev",
     "node-forge": "^1.3.1",
     "patch-package": "^6.5.1",
     "postinstall-postinstall": "^2.1.0",
@@ -82,6 +82,7 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tuvali": "github:mosip/tuvali#v0.4.3",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-vision-camera": "^2.15.5",
     "short-unique-id": "^4.4.4",
     "xstate": "^4.35.0"
   },
