--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-native-animated-pagination-dot": "^0.4.0",
     "react-native-app-auth": "^6.4.3",
     "react-native-app-intro-slider": "^4.0.4",
+    "react-native-argon2": "^2.0.1",
     "react-native-biometrics-changed": "^1.1.8",
     "react-native-bluetooth-state-manager": "^1.3.2",
     "react-native-cli": "^2.0.1",
@@ -67,7 +68,7 @@
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keychain": "^8.0.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-native-location-enabler": "^4.1.0",
+    "react-native-location": "^2.5.0",
     "react-native-mmkv-storage": "0.8.0",
     "react-native-permissions": "^3.6.0",
     "react-native-popable": "^0.4.3",
@@ -77,6 +78,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-secure-key-store": "^2.0.10",
+    "react-native-secure-keystore": "github:mosip/secure-keystore#v0.1.0",
     "react-native-securerandom": "^1.0.0",
     "react-native-simple-markdown": "^1.1.0",
     "react-native-svg": "12.1.1",
