--- a/.env
+++ b/.env
@@ -10,5 +10,8 @@ APPLICATION_THEME=orange
 #environment can be changed if it is toggled
 CREDENTIAL_REGISTRY_EDIT=true
 
+#Toggle for openID for VC
+ENABLE_OPENID_FOR_VC=false
+
 #supported languages( en, fil, ar, hi, kn, ta)
 APPLICATION_LANGUAGE=en
