--- a/.github/workflows/android-internal-build.yml
+++ b/.github/workflows/android-internal-build.yml
@@ -32,6 +32,14 @@ on:
         options:
           - false
           - true
+      enable_openid_for_vc:
+        description: 'Enable openid for vc'
+        required: true
+        default: 'false'
+        type: choice
+        options:
+          - false
+          - true
 
 jobs:
   build-android:
@@ -122,3 +130,4 @@ jobs:
           SLACK_URL: '${{ secrets.SLACK_WEBHOOK_DEVOPS }}'
           PLAY_CONSOLE_RELEASE_DESCRIPTION: ${{ github.event.inputs.buildDescription }}
           CREDENTIAL_REGISTRY_EDIT: ${{ github.event.inputs.registry_edit }}
+          ENABLE_OPENID_FOR_VC: ${{ github.event.inputs.enable_openid_for_vc }}
