--- a/.github/workflows/ios-build.yml
+++ b/.github/workflows/ios-build.yml
@@ -24,6 +24,14 @@ on:
         options:
           - false
           - true
+      enable_openid_for_vc:
+        description: 'Enable openid for vc'
+        required: true
+        default: 'false'
+        type: choice
+        options:
+          - false
+          - true
       internal-testers:
         description: 'Internal Testers Group'
         required: true
@@ -83,6 +91,7 @@ jobs:
           MATCH_PASSWORD: '${{ secrets.INJI_IOS_MATCH_PASSWORD }}'
           APPLICATION_THEME: ${{ github.event.inputs.theme }}
           CREDENTIAL_REGISTRY_EDIT: ${{ github.event.inputs.registry_edit }}
+          ENABLE_OPENID_FOR_VC: ${{ github.event.inputs.enable_openid_for_vc }}
           MIMOTO_HOST: ${{ github.event.inputs.backendServiceUrl }}
           TESTFLIGHT_INTERNAL_TESTERS_GROUP: ${{ github.event.inputs.internal-testers }}
           TESTFLIGHT_BETA_APP_DESCRIPTION: ${{ github.event.inputs.buildDescription }}
