--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-native-secure-keystore": "github:mosip/secure-keystore#v0.1.1",
     "react-native-securerandom": "^1.0.0",
     "react-native-simple-markdown": "^1.1.0",
+    "react-native-spinkit": "^1.5.1",
     "react-native-svg": "12.1.1",
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-tuvali": "github:mosip/tuvali#v0.4.4",
