--- a/.github/workflows/ios-test-automation-build.yml
+++ b/.github/workflows/ios-test-automation-build.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Upload Inji.app artifact 
         uses: actions/upload-artifact@v3.1.1
         with:
-          name: Products/Release-iphoneos/Inji.app
+          name: Inji.app
           path: ios/DerivedData/Build/Products/Release-iphoneos
           retention-days: 1
 
